--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="blue">#3E497A</color>
     <color name="blue_dark">#21325E</color>
     <color name="yellow">#F1D00A</color>
+    <color name="red">#F44336</color>
 
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#E1E1E1</color>
