--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,7 +11,8 @@
         android:layout_height="@dimen/_150sdp"
         android:id="@+id/item_card"
         app:rippleColor="@color/blue_dark"
-        android:elevation="@dimen/_12sdp"
+        android:elevation="@dimen/_14sdp"
+        android:shadowColor="@color/yellow"
         android:padding="@dimen/_16sdp"
         android:layout_margin="@dimen/_8sdp"
         android:translationZ="@dimen/_8sdp"
