--- a/app/src/main/res/xml/splash_fragment_scene.xml
+++ b/app/src/main/res/xml/splash_fragment_scene.xml
@@ -6,29 +6,29 @@
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
         motion:autoTransition="animateToEnd"
-        motion:duration="3000">
+        motion:duration="4000">
         <KeyFrameSet>
             <KeyAttribute
                 android:scaleX=".7"
                 android:scaleY=".7"
                 motion:framePosition="1"
                 motion:motionTarget="@+id/View" />
-<!--            <KeyAttribute-->
-<!--                android:scaleX="3"-->
-<!--                android:scaleY="3"-->
-<!--                motion:framePosition="40"-->
-<!--                motion:motionTarget="@+id/View" />-->
+            <KeyAttribute
+                android:scaleX="10"
+                android:scaleY="10"
+                motion:framePosition="40"
+                motion:motionTarget="@+id/View" />
 
-<!--            <KeyAttribute-->
-<!--                android:scaleX="4"-->
-<!--                android:scaleY="4"-->
-<!--                motion:framePosition="70"-->
-<!--                motion:motionTarget="@+id/View" />-->
+            <KeyAttribute
+                android:scaleX="15"
+                android:scaleY="15"
+                motion:framePosition="70"
+                motion:motionTarget="@+id/View" />
 
             <KeyAttribute
                 android:scaleX="50"
                 android:scaleY="50"
-                motion:framePosition="49"
+                motion:framePosition="100"
                 motion:motionTarget="@+id/View" />
             <KeyAttribute
                 motion:motionTarget="@+id/IconView"
@@ -36,12 +36,10 @@
                 motion:transitionPathRotate="359"
                  />
 
-            <KeyPosition
+            <KeyAttribute
                 motion:motionTarget="@+id/IconView"
-                motion:framePosition="95"
-                motion:keyPositionType="parentRelative"
-                motion:percentX="50"
-                motion:percentY="80" />
+                motion:framePosition="90"
+                android:translationZ="@dimen/_64sdp"/>
 
 
         </KeyFrameSet>
