--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,8 +11,7 @@
         android:layout_height="@dimen/_150sdp"
         android:id="@+id/item_card"
         app:rippleColor="@color/blue_dark"
-        android:elevation="@dimen/_14sdp"
-        android:shadowColor="@color/yellow"
+        android:elevation="@dimen/_18sdp"
         android:padding="@dimen/_16sdp"
         android:layout_margin="@dimen/_8sdp"
         android:translationZ="@dimen/_8sdp"
@@ -30,6 +29,9 @@
                 app:cardPreventCornerOverlap="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:translationZ="@dimen/_18sdp"
+                android:elevation="@dimen/_18sdp"
+                android:shadowColor="@color/yellow"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/item_name"
                 app:layout_constraintStart_toStartOf="parent"
