--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.addproduct.AddItemFragment">
+        tools:context=".view.ui.addproduct.AddItemFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/custom_action_bar"
