--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="com.elmorshdi.trainingtask.view.ui.mainpage.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.mainpage.MainFragment">
+        tools:context=".view.ui.mainpage.MainFragment">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main_custom_action_bar"
             android:layout_width="match_parent"
@@ -23,13 +30,17 @@
                 android:id="@+id/signOutArrow"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:layout_marginEnd="@dimen/_8sdp"
                 android:contentDescription="@string/back_arrow"
+                android:onClick="@{viewModel::signOutIconClick}"
+                android:rotation="180"
                 android:src="@drawable/ic_baseline_exit_to_app_24"
+
                 android:tint="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -37,45 +48,102 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:text="welcome"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_18ssp"
+                android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/main_tabLayout"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/sortLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/blue"
-            android:textSize="@dimen/_16ssp"
             app:layout_constraintBottom_toTopOf="@id/main_Recycler"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/main_custom_action_bar"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="#CACACA">
+            app:layout_constraintTop_toBottomOf="@id/main_custom_action_bar">
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/sortButton"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="price less than 10" />
+                android:layout_margin="@dimen/_8sdp"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_marginTop="8dp"
+                android:background="@color/blue"
+                android:drawableEnd="@drawable/ic_arrow_down"
+                android:drawablePadding="@dimen/_5sdp"
+                android:text="@{viewModel.sortText}"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_14sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/ViewButton"
+                app:layout_constraintHorizontal_bias="0.1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Between 10:20" />
+            <androidx.appcompat.widget.AppCompatToggleButton
+                android:id="@+id/ViewButton"
+                style="@style/toggleButton"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_margin="@dimen/_5sdp"
+                android:background="@drawable/ic_toggle_bg"
+                android:checked="false"
+                android:drawableTint="@color/white"
+                android:padding="@dimen/_5sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/sortButton"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="more than 20" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/errorText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableTop="@drawable/ic_baseline_error_outline_24"
+            android:drawableTint="@color/red"
+            android:text="@{viewModel.errorMessage}"
+            android:textAlignment="center"
+            android:visibility="@{viewModel.errorState ?  View.VISIBLE :View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_Recycler"
+            ProductsList="@{viewModel.sortedProducts}"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/_8sdp"
+            android:visibility="@{viewModel.recyclerVisibility?View.INVISIBLE:View.VISIBLE}"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toTopOf="@id/main_add_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sortLayout"
+            app:spanCount="2"
+            tools:listitem="@layout/item" />
 
-        </com.google.android.material.tabs.TabLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_RecyclerHor"
+            ProductsListHor="@{viewModel.sortedProducts}"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/_8sdp"
+            android:visibility="@{viewModel.recyclerVisibility?View.VISIBLE:View.INVISIBLE}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@id/main_add_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sortLayout"
+            tools:listitem="@layout/item_horizontal" />
 
         <com.github.ybq.android.spinkit.SpinKitView
             android:id="@+id/spin_kit"
@@ -83,38 +151,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="invisible"
+            android:visibility="@{viewModel.state ?  View.GONE :View.VISIBLE }"
+            app:SpinKit_Color="@color/yellow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:SpinKit_Color="@color/yellow" />
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/errorText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            android:drawableTop="@drawable/ic_baseline_error_outline_24"
-            android:drawableTint="@color/red"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/main_Recycler"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_margin="@dimen/_8sdp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/main_add_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/main_tabLayout"
-            app:spanCount="2"
-            tools:listitem="@layout/item" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/main_add_button"
@@ -125,6 +167,7 @@
             android:layout_marginEnd="@dimen/_20sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:background="@color/blue"
+            android:onClick="@{ viewModel::addProduct}"
             android:text="@string/add_new_item"
             android:textColor="@color/white"
             android:textSize="@dimen/_16ssp"
@@ -132,5 +175,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/main_Recycler" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
