--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.elmorshdi.trainingtask.ui.mainpage.MainFragment"
+        android:name="com.elmorshdi.trainingtask.view.ui.mainpage.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main">
         <action
@@ -37,7 +37,7 @@
     </fragment>
     <fragment
         android:id="@+id/addItemFragment"
-        android:name="com.elmorshdi.trainingtask.ui.addproduct.AddItemFragment"
+        android:name="com.elmorshdi.trainingtask.view.ui.addproduct.AddItemFragment"
         android:label="fragment_add_item"
         tools:layout="@layout/fragment_add_item">
         <action
@@ -52,7 +52,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.elmorshdi.trainingtask.ui.login.LoginFragment"
+        android:name="com.elmorshdi.trainingtask.view.ui.login.LoginFragment"
         android:label="login_fragment"
         tools:layout="@layout/login_fragment">
         <action
@@ -67,7 +67,7 @@
     </fragment>
     <fragment
         android:id="@+id/productFragment"
-        android:name="com.elmorshdi.trainingtask.ui.productview.ProductViewFragment"
+        android:name="com.elmorshdi.trainingtask.view.ui.productview.ProductViewFragment"
         android:label="ProductFragment">
         <action
             android:id="@+id/action_productFragment_to_mainFragment"
@@ -80,11 +80,11 @@
             app:popUpToInclusive="true" />
         <argument
             android:name="product"
-            app:argType="com.elmorshdi.trainingtask.model.Product" />
+            app:argType="com.elmorshdi.trainingtask.domain.model.Product" />
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.elmorshdi.trainingtask.ui.splash.SplashFragment"
+        android:name="com.elmorshdi.trainingtask.view.ui.splash.SplashFragment"
         android:label="splash_fragment"
         tools:layout="@layout/splash_fragment">
         <action
