--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -122,6 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/_8sdp"
+            android:orientation="vertical"
             android:visibility="@{viewModel.recyclerVisibility?View.INVISIBLE:View.VISIBLE}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toTopOf="@id/main_add_button"
@@ -153,6 +154,7 @@
             android:layout_gravity="center"
             android:visibility="@{viewModel.state ?  View.GONE :View.VISIBLE }"
             app:SpinKit_Color="@color/yellow"
+            android:translationZ="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
