--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -88,10 +88,9 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/item_price"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_2sdp"
-                    android:layout_weight="4"
                     android:text="@{product.price.toString()}"
                     android:textAlignment="textEnd"
                     android:textColor="@color/black"
