--- a/app/src/main/res/drawable/ic_toggle_bg.xml
+++ b/app/src/main/res/drawable/ic_toggle_bg.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/background"
+    <item
 
         android:drawable="@android:color/transparent" />
 
-    <item android:id="@+id/toggle"
+    <item
 
         android:drawable="@drawable/ic_toggle" />
 
