--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
->
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
 
         <variable
@@ -9,84 +9,85 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/linearLayout"
-        android:orientation="vertical"
-       android:background="@drawable/bottom_sheet_bc">
+        android:background="@drawable/bottom_sheet_bc"
+        android:orientation="vertical">
+
         <androidx.appcompat.widget.AppCompatTextView
-            android:textAlignment="center"
-            android:id="@+id/textViewSortBy"
+            android:id="@+id/dialog_textViewSortBy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:padding="@dimen/_5sdp"
-            android:textSize="@dimen/_18sdp"
-            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
             android:background="@drawable/bottom_sheet_bar"
-            android:translationZ="@dimen/_20sdp"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/sort_by" />
+            android:padding="@dimen/_5sdp"
+            android:text="@string/sort_by"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_18sdp"
+            android:textStyle="bold"
+            android:translationZ="@dimen/_20sdp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:weightSum="10"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:textAlignment="center"
-            android:id="@+id/buttonMostRecent"
+        <LinearLayout
             android:layout_width="match_parent"
-        android:layout_margin="@dimen/_4sdp"
-             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@color/white"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16sdp"
-            android:text="@string/most_recent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:textAlignment="center"
-
-            android:id="@+id/buttonPriceLtoH"
-            android:layout_width="match_parent"
-        android:layout_margin="@dimen/_4sdp"
-            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16sdp"
-            android:background="@color/white"
-            android:text="@string/price_low_to_high" />
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:weightSum="10">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:textAlignment="center"
-            android:id="@+id/buttonPriceHtoL"
-            android:layout_width="match_parent"
-            android:layout_margin="@dimen/_4sdp"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16sdp"
-            android:background="@color/white"
-            android:text="@string/price_high_to_low" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/dialog_buttonMostRecent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/_4sdp"
+                android:background="@color/white"
+                android:text="@string/most_recent"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16sdp" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/buttonName"
-            android:layout_width="match_parent"
-        android:layout_margin="@dimen/_4sdp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16sdp"
-            android:background="@color/white"
-            android:layout_height="wrap_content"
-            android:text="@string/name_a_to_z" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/dialog_buttonPriceLtoH"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/_4sdp"
+                android:background="@color/white"
+                android:text="@string/price_low_to_high"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16sdp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/dialog_buttonPriceHtoL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/_4sdp"
+                android:background="@color/white"
+                android:text="@string/price_high_to_low"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16sdp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/dialog_buttonName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/_4sdp"
+                android:background="@color/white"
+                android:text="@string/name_a_to_z"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16sdp" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 
 </layout>
